--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title> NGOMEZR </title>
+    <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
+
 </head>
+
 <body>
 
-    Hello Nico 
-
+    <div class = "navbar-container">
+        <div class = "navbar-name">
+              <a href = "index.html">  Norbert Gomez Rosales </a>  
+        </div>  
+        <div class = "navbar-links">
+            <ul class = "links">
+                <li>
+                    <a href="about.html"> About </a>
+                </li>
+                <li>
+                    <a href="pages/resume.html"> Resume </a>
+                </li>
+                <li>
+                    <a href="pages/porfolio.html"> Portfolio </a>
+                </li>
+                <li>
+                    <a href="#"> Contact </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
+
+
