--- a/index.html
+++ b/index.html
@@ -6,35 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> NGOMEZR </title>
     <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-
     <div class = "navbar-container">
         <div class = "navbar-name">
-              <a href = "index.html">  Norbert Gomez Rosales </a>  
+              <a href = "index.html"> Norberto Gomez </a>  
         </div>  
         <div class = "navbar-links">
             <ul class = "links">
                 <li>
-                    <a href="about.html"> About </a>
+                    <a href="pages/about.html"> About </a>
                 </li>
                 <li>
                     <a href="pages/resume.html"> Resume </a>
                 </li>
                 <li>
-                    <a href="pages/porfolio.html"> Portfolio </a>
+                    <a href="pages/portfolio.html"> Portfolio </a>
                 </li>
                 <li>
-                    <a href="#"> Contact </a>
+                    <a href="mailto:gnorberto72@gmail.com"> Contact </a>
                 </li>
             </ul>
         </div>
     </div>
-    
+
+    <div class = "welcome-text">
+        <h1>
+            <img src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
+            alt="Emoji" width="55" height ="50"> 
+            WELCOME TO MY WEBSITE
+        </h1>
+    </div>
+   <div class = "horizontal-line"></div>
+
+    <a href = "https://www.google.com" style = "text-decoration:none; color:white;">
+        <button type ="button" class = "btn btn-outline-dark"> CLICK ME! </button>
+    </a>
+
+    <img class = "test-img" src= "https://img1.ak.crunchyroll.com/i/spire3/63b60d95dd607c7493e4ee53e5fdbace1527871211_large.jpg" 
+    alt="ANIME BRO" width="300px" height="300px">
 </body>
 
 </html>
+
 
 
