--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> NGOMEZR </title>
     <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-
 <body>
     <div class = "navbar-container">
         <div class = "navbar-name">
@@ -34,7 +33,7 @@
 
     <div class = "welcome-text">
         <h1>
-            <img src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
+            <img class ="emoji" src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
             alt="Emoji" width="55" height ="50"> 
             WELCOME TO MY WEBSITE
         </h1>
@@ -46,9 +45,9 @@
     </a>
 
     <img class = "test-img" src= "https://img1.ak.crunchyroll.com/i/spire3/63b60d95dd607c7493e4ee53e5fdbace1527871211_large.jpg" 
-    alt="ANIME BRO" width="300px" height="300px">
-</body>
+    alt="ANIME BRO" width=460 height=345>
 
+</body>
 </html>
 
 
