--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> NGOMEZR </title>
     <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
@@ -32,12 +32,13 @@
     </div>
 
     <div class = "welcome-text">
-        <h1>
-            <img class ="emoji" src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
-            alt="Emoji" width="55" height ="50"> 
+        <h2>
             WELCOME TO MY WEBSITE
-        </h1>
+        </h2>
+        <img class ="emoji" src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
+        alt="Emoji"> 
     </div>
+
    <div class = "horizontal-line"></div>
 
     <a href = "https://www.google.com" style = "text-decoration:none; color:white;">
@@ -45,10 +46,9 @@
     </a>
 
     <img class = "test-img" src= "https://img1.ak.crunchyroll.com/i/spire3/63b60d95dd607c7493e4ee53e5fdbace1527871211_large.jpg" 
-    alt="ANIME BRO" width=460 height=345>
+    alt="ANIME BRO">
 
 </body>
 </html>
-
 
 
