Update, New Platform

--- a/index.html
+++ b/index.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> NGOMEZR </title>
-    <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
-    <div class = "navbar-container">
-        <div class = "navbar-name">
-              <a href = "index.html"> Norberto Gomez </a>  
-        </div>  
-        <div class = "navbar-links">
-            <ul class = "links">
-                <li>
-                    <a href="pages/about.html"> About </a>
-                </li>
-                <li>
-                    <a href="pages/resume.html"> Resume </a>
-                </li>
-                <li>
-                    <a href="pages/portfolio.html"> Portfolio </a>
-                </li>
-                <li>
-                    <a href="mailto:gnorberto72@gmail.com"> Contact </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <title> NGOMEZR </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
+        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,9
+        00|Cormorant+Garamond:300, 300i, 400, 400i, 500, 500i, 600, 600i, 700, 700i" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <a href = "index.html" class = "header-brand">dream</a>   
+            <nav>
+                <ul>
+                    <li>
+                        <a href="pages/about.html"> About </a>
+                    </li>
+                    <li>
+                        <a href="pages/resume.html"> Resume </a>
+                    </li>
+                    <li>
+                        <a href="pages/portfolio.html"> Portfolio </a>
+                    </li>
+                    <li>
+                        <a href="mailto:gnorberto72@gmail.com"> Contact </a>
+                    </li>
+                </ul>
+                <a href ="https://www.google.com" class = "header-cases"> Search </a>
+            </nav>
+        </header>
+        <main>
+            <section class ="index-banner">
+                <h2>
+                    UPCOMING PROGRAMMER <br> SEEKING SUCCESS
+                </h2>
+                <h1>
+                    Currently attending a University near my area, coming from a low incoming family that inspires me to keep going and lead them out of the slump.
+                </h1>
+            </section>           
+        </main>
+        <footer>
 
-    <div class = "welcome-text">
-        <h2>
-            WELCOME TO MY WEBSITE
-        </h2>
-        <img class ="emoji" src="https://www.emojimeanings.net/img/emojis-en/crazy-face-1F92A.png" 
-        alt="Emoji"> 
-    </div>
+        </footer>
 
-   <div class = "horizontal-line"></div>
-
-    <a href = "https://www.google.com" style = "text-decoration:none; color:white;">
-        <button type ="button" class = "btn btn-outline-dark"> CLICK ME! </button>
-    </a>
-
-    <img class = "test-img" src= "https://img1.ak.crunchyroll.com/i/spire3/63b60d95dd607c7493e4ee53e5fdbace1527871211_large.jpg" 
-    alt="ANIME BRO">
-
-</body>
+    </body>
 </html>
 
 
