--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
             </nav>
         </header>
         <main>
-            <section class ="index-banner">
+        <section class ="index-banner">
+        <div class = "vertical-center">
                 <h2>
                     UPCOMING PROGRAMMER <br> SEEKING SUCCESS
                 </h2>
                 <h1>
-                    Currently attending a University near my area, coming from a low incoming family that inspires me to keep going and lead them out of the slump.
+                    Coming from a low income family, I still managed to attend a University near my area. My family is what inspires me to keep going and lead them out of the slump.
                 </h1>
-            </section>           
+        </div>
+        </section>  
+        <section>
+
+        </section>         
         </main>
         <footer>
 
