--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> NGOMEZR </title>
+        <title> Dream </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
@@ -41,13 +41,19 @@
                 </h1>
         </div>
         </section>  
-        <section>
-
+        <section class = "index-links">
+            <a href="https://google.com">
+                <div class="index-boxlink-sqaure">
+                <h3>Search</h3>
+                </div>
+            </a>
         </section>         
         </main>
         <footer>
 
         </footer>
+
+        <!-- Stopped at 48:15 -->
 
     </body>
 </html>
