--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Dream </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel = "stylesheet" type = "text/css" href="assests/CSS/index.css">
+        <link rel = "stylesheet" type = "text/css" href="/assests/CSS/index.css">
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,9
         00|Cormorant+Garamond:300, 300i, 400, 400i, 500, 500i, 600, 600i, 700, 700i" rel="stylesheet">
     </head>
