--- a/pages/about.html
+++ b/pages/about.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel = "stylesheet" type = "text/css" href="/assests/CSS/about.css">
 </head>
 <body>
    <h1>
-       HELLO, WEBSITE IN DEVELOPMENT
+       HELLO, ... YEAH NOTHING HERE... yet ;)
     </h1>
+<section class ="img-test">
 
-   <img src= "https://cdn.vox-cdn.com/thumbor/im3DV37lGwiMGiX_FoTVhh92MTM=/0x0:1920x945/1200x480/filters:focal(807x320:1113x626)/cdn.vox-cdn.com/uploads/chorus_image/image/60757935/ply_best_manga_2018.1533678249.jpg" 
-   alt="ANIME BRO" width="980" height="345">
+</section>
 
 </body>
 </html>
