--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel = "stylesheet" type = "text/css" href="/assests/CSS/index.css">
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,9
         00|Cormorant+Garamond:300, 300i, 400, 400i, 500, 500i, 600, 600i, 700, 700i" rel="stylesheet">
+        <script src ="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src ="/assests/js/parallax.min.js" ></script>
     </head>
     <body>
         <header>
@@ -30,6 +32,7 @@
                 <a href ="https://www.google.com" class = "header-cases"> Search </a>
             </nav>
         </header>
+
         <main>
         <section class ="index-banner">
         <div class = "vertical-center">
@@ -49,6 +52,16 @@
             </a>
         </section>         
         </main>
+
+        <section>
+            <h2>
+                HELLO WORLD!<br>
+                HELLO AGAIN
+            </h2>
+        </section>
+        
+        <div class="parallax-container" data-parallax="scroll" data-image-src="/assests/img/cover.jpg"></div>
+
         <footer>
 
         </footer>
