--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel = "stylesheet" type = "text/css" href="/assests/CSS/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,9
-        00|Cormorant+Garamond:300, 300i, 400, 400i, 500, 500i, 600, 600i, 700, 700i" rel="stylesheet">
-        <script src ="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src ="/assests/js/parallax.min.js" ></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>
+    <body>  
         <header>
-            <a href = "index.html" class = "header-brand">dream</a>   
+        <div class ="menu-toggle" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class = "overlay"></div>
+        <div class = "container">
             <nav>
+                    <a href = "index.html" class = "header-brand">dream</a>   
                 <ul>
                     <li>
                         <a href="pages/about.html"> About </a>
@@ -29,45 +32,25 @@
                         <a href="mailto:gnorberto72@gmail.com"> Contact </a>
                     </li>
                 </ul>
-                <a href ="https://www.google.com" class = "header-cases"> Search </a>
             </nav>
-        </header>
-        <main>
-        <div class = "parallax-1" data-parallax="scroll" data-image-src="/assests/img/real-space-wallpaper-5.jpg">
-            <div class = "parallax-inner">
-                <section class="title-statement ">
-                <h2>
-                    UPCOMING PROGRAMMER <br> SEEKING SUCCESS
-                </h2>
-                <h1>
-                    Coming from a low income family, I still managed to attend a University near my area. My family is what inspires me to keep going and lead them out of the slump.
-                </h1>
-                </section>
-            </div>    
         </div>
-        <div class ="clearfix"> </div>
-        <section>
-            <div class ="index-text">
-                <h2>HELLO WELCOME</h2>
-                <p>
-                    "HELLO AND WELCOME, WEBSITE IS STILL IN DEVELOPMENT.
-                </p>
-                <h2></h2>
-                
-            </div>
-        </section>   
-        <div class ="clearfix"> </div>
-        <div class = "parallax-window" data-parallax="scroll"data-image-src="/assests/img/image.jpg">
+        <section class="title-statement">
+            <h2>
+                UPCOMING PROGRAMMER <br> SEEKING SUCCESS
+            </h2>
+            <h1>
+                Coming from a low income family, I still managed to attend a University near my area. My family is what inspires me to keep going and lead them out of the slump.
+            </h1>
+         </section> 
+        <div class="social-icons">
+                <ul>
+                <li><a href="https://www.facebook.com/ayyoh.junior"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/juniorr_gomez/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://twitter.com/juniorr_gomez"><i class="fab fa-twitter"></i></a></li>
+                </ul>
         </div>
-
-        </main>
-        
-        <footer>
-
-        </footer>
-
-        <!-- Stopped at 48:15 -->
-
+        </header>  
+        <script src ="/assests/js/index.js"></script> 
     </body>
 </html>
 
