--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>  
-        <header>
+    <body>
+    <main class="image-cover">
         <div class ="menu-toggle" id="hamburger">
             <i class="fas fa-bars"></i>
         </div>
@@ -39,7 +39,7 @@
                 UPCOMING PROGRAMMER <br> SEEKING SUCCESS
             </h2>
             <h1>
-                Coming from a low income family, I still managed to attend a University near my area. My family is what inspires me to keep going and lead them out of the slump.
+                My family are my main supporters and with them I am able to keep going.  
             </h1>
          </section> 
         <div class="social-icons">
@@ -49,8 +49,10 @@
                 <li><a href="https://twitter.com/juniorr_gomez"><i class="fab fa-twitter"></i></a></li>
                 </ul>
         </div>
-        </header>  
-        <script src ="/assests/js/index.js"></script> 
+    
+    </main> 
+    
+    <script src ="/assests/js/index.js"></script> 
     </body>
 </html>
 
