--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 UPCOMING PROGRAMMER <br> SEEKING SUCCESS
             </h2>
             <h1>
-                My family are my main supporters and with them I am able to keep going.  
+                Believe you can and you're halfway there. <br> - Theodore Roosevelt -
             </h1>
          </section> 
         <div class="social-icons">
