--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class = "overlay"></div>
         <div class = "container">
             <nav>
-                    <a href = "index.html" class = "header-brand">dream</a>   
+                    <a href = "index.html" class = "header-brand">N<span>G</span>R</a>   
                 <ul>
                     <li>
                         <a href="pages/about.html"> About </a>
@@ -51,7 +51,6 @@
         </div>
     
     </main> 
-    
     <script src ="/assests/js/index.js"></script> 
     </body>
 </html>
