--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 Believe you can and you're halfway there. <br> - Theodore Roosevelt -
             </h1>
          </section> 
-        <div class="social-icons">
+        <!-- <div class="social-icons">
                 <ul>
                 <li><a href="https://www.facebook.com/ayyoh.junior"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="https://www.instagram.com/juniorr_gomez/"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://twitter.com/juniorr_gomez"><i class="fab fa-twitter"></i></a></li>
                 </ul>
-        </div>
+        </div> -->
     
     </main> 
     <script src ="/assests/js/index.js"></script> 
