--- a/pages/about.html
+++ b/pages/about.html
@@ -8,9 +8,9 @@
     <link rel = "stylesheet" type = "text/css" href="/assests/CSS/about.css">
 </head>
 <body>
-   <h1>
-       HELLO, ... YEAH NOTHING HERE... yet ;)
-    </h1>
+   <h2>
+    * Nothing Here, Yet *
+    </h2>
 <section class ="img-test">
 
 </section>
