--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md navbar-light">
         <a class="navbar-brand" href="/index.html">
             <i class="fas fa-bars" style="font-size: larger;"></i> 
-            <span style="font-weight: bold; font-size: large;">NGR</span>
+            <a href = "index.html" class = "header-brand">N<span>G</span>R</a>   
         </a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent">
